src/main/webapp/css/main.css
/* ... */
/*		General CSS		*/
body{
	background: #faf9f9;
	padding: 0px;
	margin: 0px;
}

a:focus{
	color: #fff!important;
	text-decoration: none!important;
}

.container{
	max-width: 1130px;
}










/*		Header 		*/

header{
	position: relative;
	display: block;
	width: 100%;
	height: 130px;
	z-index: 99;
	background-color: #41c17d;
	background-image: -moz-linear-gradient(bottom, #47ad76 0%, #47ad76 0.27%, #40c27d 99.46%, #40c27d 100%);
	background-image: -o-linear-gradient(bottom, #47ad76 0%, #47ad76 0.27%, #40c27d 99.46%, #40c27d 100%);
	background-image: -webkit-linear-gradient(bottom, #47ad76 0%, #47ad76 0.27%, #40c27d 99.46%, #40c27d 100%);
	background-image: linear-gradient(bottom, #47ad76 0%, #47ad76 0.27%, #40c27d 99.46%, #40c27d 100%);
}

header .logo{
	display: table-cell;
	margin: 45px 100px 0 0;
}

header .burger_icon{
	display: none;
	float: right;
	background: #ffffff;
	padding: 5px 10px;
	text-transform: uppercase;

	color: #43b779;
	font-family: "open_regular", Helvetica, Arial, sans-serif;
	font-size: 14px;

	-moz-border-radius: 2px;
	-webkit-border-radius: 2px;
	border-radius: 2px;

	margin: 45px 10px 0 0;
}

header .burger_icon:hover{
	cursor: pointer;
}

header .burger_icon.active{
	background: #359663;
	color: #ffffff;
}

header nav{
	margin-top: 50px;
	display: table-cell;
}

header nav li{
	float: left;
	margin-left: 40px;
}

header nav li:first-child{
	margin: 0;
}

header nav li a{
	color: #fff;
	font-family: "open_regular", Helvetica, Arial, sans-serif;
	font-size: 16px;

	transition: all .2s linear;
	-o-transition: all .2s linear;
	-moz-transition: all .2s linear;
	-webkit-transition: all .2s linear;
}

header nav li a:hover,
header nav li a:focus{
	text-decoration: none;
	color: #B7EFD1!important;
}

header .social{
	display: table-cell;
	margin-top: 45px;
}

header .social li{
	float: left;
	margin-left: 20px;
}

header .social li:first-child{
	margin: 0;
}










/*		Hero section 		*/

.hero{
	display: block;
	position: relative;
	width: 100%;
	height: 560px;
	background: url('../img/hero.jpg') no-repeat fixed center center;	
	background-size: cover;
}

.hero .caption{
	position: absolute;
	max-width: 550px;
	margin-left: 80px;
	top: 50%;
	transform:translate(0,-50%);
	-webkit-transform:translate(0,-50%);
	-moz-transform:translate(0,-50%);
	-o-transform:translate(0,-50%);
}

.hero .caption h1{
	color: #525252;
	font-family: "open_bold", Helvetica, Arial, sans-serif;
	font-size: 34px;
	font-weight: bold;
	word-break: break-word;
}

.captiongnome{
	position: absolute;
	max-width: 550px;
	margin-left: 80px;
	top: 50%;
	transform:translate(0,-50%);
	-webkit-transform:translate(0,-50%);
	-moz-transform:translate(0,-50%);
	-o-transform:translate(0,-50%);
}

.captiongnome h1{
	color: #FFF;
	font-family: "open_bold", Helvetica, Arial, sans-serif;
	font-size: 34px;
	font-weight: bold;
	word-break: break-word;
}

.hero .caption p{
	color: #6d6c6c;
	font-family: "open_regular", Helvetica, Arial, sans-serif;
	font-size: 16px;
	line-height: 30px;
	margin: 15px 0 35px 0;
}

.hero .captiongnome p{
	color: #FFF;
	font-family: "open_regular", Helvetica, Arial, sans-serif;
	font-size: 16px;
	line-height: 30px;
	margin: 15px 0 35px 0;
}

#slider .caption p{
	margin: 0;
}

a.app_store_btn{
	display: inline-block;
	text-decoration: none;
	padding: 15px 40px;
	border: 2px solid #FFF;
	-moz-border-radius: 2px;
	-webkit-border-radius: 2px;
	border-radius: 2px;
	margin: 20px 20px 10px 0;

	color: #FFF;
	font-family: "open_semibold", Helvetica, Arial, sans-serif;
	font-size: 16px;
}

a.app_store_btn:hover,
a.app_store_btn:focus{
	border-color: #41c27d;
	color: #41c27d!important;
}

a.app_link{
	text-transform: lowercase;
	letter-spacing: .5px;
	color: #636363;
	font-family: "open_regular", Helvetica, Arial, sans-serif;
	font-size: 16px;
}

a.app_link:hover,
a.app_link:focus{
	text-decoration: none;
	color: #41c27d!important;
}

a.app_store_btn,
.play_icon,
.iphone_icon,
.android_icon,
a.app_link{
	transition: all .2s linear;
	-o-transition: all .2s linear;
	-moz-transition: all .2s linear;
	-webkit-transition: all .2s linear;
}


.about_video{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 9999;
    background: rgba(0, 0, 0, .8);
    display: none;
}

.about_video iframe{
    width: 100%;
    height: 100%;
    z-index: 9999;
}

.close_video{
    text-decoration: none;
    position: absolute;
    width: 38px;
    height: 38px;
    top: 50px;
    right: 50px;
    background: url('../img/close_video.png') no-repeat;
    z-index: 9999;
}











/*		Featured on section 		*/

.featured_on{
	width: 100%;
	padding: 25px 0;
	background: #f3f3f3;
}

.featured_on ul{
	margin: 0;
}

.featured_on li{
	position: relative;
	height: 100%;
}

.featured_on li:first-child{
	margin-left: 0;
}










/*		About section 		*/

.about{
	padding: 100px 0;
}

.about .iphone{
	max-width: 339px;
	position: relative;
	display: inline-block;
	text-align: center;
}

.about .iphone img{
	width: 100%;
	height: auto;
}

.about .features_list{
	margin-left: 50px;
}

.about .features_list h1{
	color: #525151;
	font-family: "open_bold", Helvetica, Arial, sans-serif;
	font-size: 34px;
	font-weight: bold;
	line-height: 46px;
	margin: 0 0 20px 0;
	word-break: break-word;
}

.about .features_list p{
	color: #767272;
	font-family: "open_regular", Helvetica, Arial, sans-serif;
	font-size: 16px;
	margin-bottom: 45px;
	line-height: 32px;
}

.about .features_list ul{
	margin-bottom: 30px;
}

.about .features_list ul li{
	display: block;
	position: relative;
	color: #6c6c6c;
	font-family: "open_semibold", Helvetica, Arial, sans-serif;
	font-size: 16px;
	line-height: 44px;
	text-indent: 25px;

	transition: all .2s linear;
	-o-transition: all .2s linear;
	-moz-transition: all .2s linear;
	-webkit-transition: all .2s linear;
}

.about .features_list ul li.camera_icon{	
	background: url('../img/icon1.png') no-repeat;
	background-position: 0 15px; 
}
/* ... */

